PRESIDECMS-2311 Fix object/ asset picker icons misalignment.

--- a/system/assets/css/admin/core/assetPicker.less
+++ b/system/assets/css/admin/core/assetPicker.less
@@ -38,6 +38,10 @@
 			padding-bottom : 4px;
 			border-right   : none;
 
+			div b {
+				line-height : 36px;
+			}
+
 			> span {
 				display : block;
 			}
@@ -48,7 +52,9 @@
 			}
 
 			.remove-choice-link {
-				top : 10px;
+				top         : 0;
+				right       : 30px;
+				line-height : 44px;
 			}
 		}
 	}
